src/argo-app-deployment/animation-app/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: animation-app
  labels:
    argocd.argoproj.io/managed-by: openshift-gitops
