src/argo-app-deployment/animation-app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: animation-app
  name: animation-app
  namespace: animation-app
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: animation-app
