src/argo-app-deployment/animation-app/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: animation-app
  name: animation-app
  namespace: animation-app
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: animation-app
    weight: 100
